Can't control color ramp node color values with drivers #53794

Closed
opened 2018-01-15 16:51:19 +01:00 by Matt Heimlich · 3 comments

System Information
Windows 10

Blender Version
Broken: All versions. "Works" slightly better with new depsgraph.

Short description of error
Attempting to control the color value of a color ramp color block with a driver either A.) fails completely with old depsgraph or B.) fails to update properly with new depsgraph.

Exact steps for others to reproduce the error
Attached blend file already has drivers set up in a way that would be expected to work. RGB nodes should drive the color values of the color ramp node. In old depsgraph, nothing happens. In new depsgraph, values only update when interacting with the color ramp node.

DriverBug.blend

**System Information** Windows 10 **Blender Version** Broken: All versions. "Works" slightly better with new depsgraph. **Short description of error** Attempting to control the color value of a color ramp color block with a driver either A.) fails completely with old depsgraph or B.) fails to update properly with new depsgraph. **Exact steps for others to reproduce the error** Attached blend file already has drivers set up in a way that would be expected to work. RGB nodes should drive the color values of the color ramp node. In old depsgraph, nothing happens. In new depsgraph, values only update when interacting with the color ramp node. [DriverBug.blend](https://archive.blender.org/developer/F1839903/DriverBug.blend)
Author

Added subscriber: @MatthewHeimlich

Added subscriber: @MatthewHeimlich
Sergey Sharybin was assigned by Matt Heimlich 2018-01-15 16:52:11 +01:00

This issue was referenced by 67e4b1d3e9

This issue was referenced by 67e4b1d3e9fdb70b5007aeb00dd31482b649ee19

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53794
No description provided.