source/blender/depsgraph/intern/builder/deg_builder_relations.cc
@@ -1177,7 +1177,9 @@ void DepsgraphRelationBuilder::build_driver_variables(ID *id, FCurve *fcu)
 				if (RNA_pointer_is_null(&variable_key.ptr)) {
 					continue;
 				}
-				if (is_same_bone_dependency(variable_key, self_key)) {
+				if (is_same_bone_dependency(variable_key, self_key) ||
+				    is_nodetree_node_dependency(variable_key, self_key))
+				{
 					continue;
 				}
 				add_relation(variable_key, driver_key, "RNA Target -> Driver");
