source/blender/depsgraph/intern/builder/deg_builder_relations_impl.h
@@ -30,6 +30,12 @@
 
 #pragma once
 
+#include "intern/nodes/deg_node_id.h"
+
+extern "C" {
+#include "DNA_ID.h"
+}
+
 namespace DEG {
 
 template <typename KeyType>
@@ -152,6 +158,39 @@ bool DepsgraphRelationBuilder::is_same_bone_dependency(const KeyFrom& key_from,
 	}
 	/* ... BUT, we also need to check if it's same bone.  */
 	if (!STREQ(op_from->owner->name, op_to->owner->name)) {
+		return false;
+	}
+	return true;
+}
+
+template <typename KeyFrom, typename KeyTo>
+bool DepsgraphRelationBuilder::is_nodetree_node_dependency(
+        const KeyFrom& key_from,
+        const KeyTo& key_to)
+{
+	/* Get operations for requested keys. */
+	DepsNode *node_from = get_node(key_from);
+	DepsNode *node_to = get_node(key_to);
+	if (node_from == NULL || node_to == NULL) {
+		return false;
+	}
+	OperationDepsNode *op_from = node_from->get_exit_operation();
+	OperationDepsNode *op_to = node_to->get_entry_operation();
+	if (op_from == NULL || op_to == NULL) {
+		return false;
+	}
+	/* Check if this is actually a node tree. */
+	if (GS(op_from->owner->owner->id->name) != ID_NT) {
+		return false;
+	}
+	/* Different node trees. */
+	if (op_from->owner->owner != op_to->owner->owner) {
+		return false;
+	}
+	/* We are only interested in relations like BONE_DONE -> BONE_LOCAL... */
+	if (!(op_from->opcode == DEG_OPCODE_PARAMETERS_EVAL &&
+	      op_to->opcode == DEG_OPCODE_PARAMETERS_EVAL))
+	{
 		return false;
 	}
 	return true;
